:green_heart: change dependency version

--- a/formatter-test/pom.xml
+++ b/formatter-test/pom.xml
@@ -29,7 +29,7 @@
 					<dependency>
 						<groupId>de.muenchen.itm</groupId>
 						<artifactId>itm-java-codeformat</artifactId>
-						<version>1.0.0</version>
+						<version>${project.version}</version>
 					</dependency>
 				</dependencies>
 				<configuration>
