--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,14 +38,14 @@ jobs:
       - name: Create Git Tag
         if: github.event.inputs.snapshot-build == 'n'
         run: |
-          export version=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout')
+          export version=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout)
           git config user.name ITM-Bot
           git config user.email opensource@muenchen.de
           git tag -a $version -m "$version"
           git push origin $version
 
       - name: Increment Version
-        if: github.event.inputs.snapshot-build == 'n'   ##Parameter - Increment only after release
+        if: github.event.inputs.snapshot-build == 'n'
         run: |
           ./mvnw build-helper:parse-version versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} versions:commit
           git config user.name ITM-Bot
