--- a/formatter-test/pom.xml
+++ b/formatter-test/pom.xml
@@ -21,6 +21,15 @@
 
 	<build>
 		<plugins>
+			<!-- Skip this module while releasing -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<!-- Test: Check code -->
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
