--- a/formatter-test/pom.xml
+++ b/formatter-test/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.muenchen.itm</groupId>
+		<groupId>de.muenchen.oss</groupId>
 		<artifactId>itm-java-codeformat-parent</artifactId>
-		<version>1.0.4</version>
+		<version>1.0.5-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -14,7 +14,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>de.muenchen.itm</groupId>
+			<groupId>de.muenchen.oss</groupId>
 			<artifactId>itm-java-codeformat</artifactId>
 		</dependency>
 	</dependencies>
@@ -36,7 +36,7 @@
 				<version>2.28.0</version>
 				<dependencies>
 					<dependency>
-						<groupId>de.muenchen.itm</groupId>
+						<groupId>de.muenchen.oss</groupId>
 						<artifactId>itm-java-codeformat</artifactId>
 						<version>${project.version}</version>
 					</dependency>
