--- a/formatter/pom.xml
+++ b/formatter/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.muenchen.itm</groupId>
+		<groupId>de.muenchen.oss</groupId>
 		<artifactId>itm-java-codeformat-parent</artifactId>
-		<version>1.0.4</version>
+		<version>1.0.5-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
