--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.muenchen.itm</groupId>
+	<groupId>de.muenchen.oss</groupId>
 	<artifactId>itm-java-codeformat-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.4</version>
+	<version>1.0.5-SNAPSHOT</version>
 	<name>itm-java-codeformat</name>
 	<description>it@M java Codeformat</description>
 	<url>https://github.com/it-at-m/itm-java-codeformat</url>
@@ -73,7 +73,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>de.muenchen.itm</groupId>
+				<groupId>de.muenchen.oss</groupId>
 				<artifactId>itm-java-codeformat</artifactId>
 				<version>${project.version}</version>
 			</dependency>
