--- a/formatter-test/pom.xml
+++ b/formatter-test/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>de.muenchen.oss</groupId>
 		<artifactId>itm-java-codeformat-parent</artifactId>
-		<version>1.0.8</version>
+		<version>1.0.8-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -21,14 +21,6 @@
 
 	<build>
 		<plugins>
-			<!-- Skip this module while releasing -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
 			<!-- Test: Check code -->
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
