--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,8 +10,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
-
+          java-version: "17"
+          distribution: "temurin"
+          cache: "maven"
       - name: Build with Maven
-        run: mvn --batch-mode verify
+        run: mvn -B -ntp verify
