--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.muenchen.oss</groupId>
@@ -14,9 +16,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
-
-		<formatter-maven-plugin.version>2.19.0</formatter-maven-plugin.version>
-
 	</properties>
 
 	<modules>
@@ -52,17 +51,10 @@
 	<scm>
 		<url>https://github.com/it-at-m/itm-java-codeformat</url>
 		<connection>scm:git:https://github.com/it-at-m/itm-java-codeformat.git</connection>
-		<developerConnection>scm:git:https://github.com/it-at-m/itm-java-codeformat.git</developerConnection>
+		<developerConnection>
+			scm:git:https://github.com/it-at-m/itm-java-codeformat.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
-
-	<distributionManagement>
-		<!-- Central Repository -->
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
@@ -89,9 +81,9 @@
 					<version>3.2.4</version>
 				</plugin>
 				<plugin>
-					<groupId>org.sonatype.plugins</groupId>
-					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>1.6.13</version>
+					<groupId>org.sonatype.central</groupId>
+					<artifactId>central-publishing-maven-plugin</artifactId>
+					<version>0.4.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -145,15 +137,16 @@
 			<id>release</id>
 			<build>
 				<plugins>
-					<!-- Nexus Staging Plugin -->
+					<!-- Central Portal Publishing Plugin -->
 					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<groupId>org.sonatype.central</groupId>
+						<artifactId>central-publishing-maven-plugin</artifactId>
 						<extensions>true</extensions>
 						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<tokenAuth>true</tokenAuth>
+							<autoPublish>true</autoPublish>
+							<deploymentName>
+								${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
 						</configuration>
 					</plugin>
 					<!-- GPG plugin -->
@@ -171,7 +164,8 @@
 									<goal>sign</goal>
 								</goals>
 								<configuration>
-									<!-- Prevent `gpg` from using pinentry programs -->
+									<!-- Prevent `gpg` from using pinentry
+									programs -->
 									<gpgArguments>
 										<arg>--pinentry-mode</arg>
 										<arg>loopback</arg>
@@ -184,5 +178,4 @@
 			</build>
 		</profile>
 	</profiles>
-
 </project>
