--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.muenchen.oss</groupId>
 	<artifactId>itm-java-codeformat-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.11-SNAPSHOT</version>
-	<name>itm-java-codeformat</name>
+	<name>itm-java-codeformat-parent</name>
 	<description>it@M java Codeformat</description>
 	<url>https://github.com/it-at-m/itm-java-codeformat</url>
 	<properties>
@@ -180,12 +182,6 @@
 								</goals>
 							</execution>
 						</executions>
-						<configuration>
-							<doclint>none</doclint>
-							<sourceFileIncludes>
-								<sourceFileInclude>**/*.java</sourceFileInclude>
-							</sourceFileIncludes>
-						</configuration>
 					</plugin>
 
 					<!-- Central Portal Publishing Plugin -->
